5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4000/executions/1635_2445.log
== TEST (2019-04-12 14:28:11) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5/9 * (vt - 32)
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:28:22) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5/9 * (vt - 32)
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.185181
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:28:30) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5/9 * (vt - 32)
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:28:32) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5/9 * (vt - 32)
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.158183
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:28:32) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5/9 * (vt - 32)
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.139371
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:28:34) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5/9 * (vt - 32)
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.220819
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:29:03) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5*v-5*32 / 9
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = 5*v-5*32 / 9
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:29:04) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5*v-5*32 / 9
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.207055
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = 5*v-5*32 / 9
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:29:05) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5*v-5*32 / 9
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = 5*v-5*32 / 9
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:29:06) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5*v-5*32 / 9
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = 5*v-5*32 / 9
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:29:07) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = 5*v-5*32 / 9
f = 9*vt/5 + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.134693
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = 5*v-5*32 / 9
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:29:36) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:29:37) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.206665
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:29:39) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.157863
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:29:48) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:29:49) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.169072
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:29:50) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:29:51) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.216615
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:29:52) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.149778
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1635/2445/main.py", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:29:57) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*v-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    c = (5*v-5*32) / 9
NameError: name 'v' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:30:16) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:18) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.126367
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:30:19) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:21) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.182157
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:21) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.15517
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:30:24) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:26) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.121505
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:30:27) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.197659
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:30:58) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:00) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(c, 2))
else:
	print(round(f, 2))
	


-- EXECUTION TIME:
0.124139
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
608.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:31:08) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:10) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.19702
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:31:10) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:11) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.147341
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:13) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.197664
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:31:13) 
-- CODE:
t = input("F ou C")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:31:40) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:42) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.186841
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:31:42) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:31:44) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.150221
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:32:17) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:19) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.202029
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:19) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.150991
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:20) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.114957
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:32:52) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if( t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:32:53) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if( t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.130276
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:07) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t== "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:09) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t== "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.138429
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:15) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:16) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.14455
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:17) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:18) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.173012
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:33:18) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:33:20) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.146339
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:34:29) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:34:30) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = ((9*vt/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.127893
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:35:45) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = (((9*vt)/5) + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- ERROR:
File "XXXX", line 5
    if(t == "c" ):
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:46) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = (((9*vt)/5) + 32
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.158383
-- ERROR:
  File "/home/codebench/codes/1635/2445/main.py", line 5
    if(t == "c" ):
                 ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:35:56) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
160.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:57) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.180894
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:35:58) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "c" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.192555
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
160.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
-17.78
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-12 14:36:16) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "C" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- OUTPUT:
608.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-12 14:36:17) 
-- CODE:
t = input("F ou C: ")
vt= float(input("valor da temperatura: "))
c = (5*vt-5*32) / 9
f = (((9*vt)/5) + 32)
if(t == "C" ):
	print(round(f, 2))
else:
	print(round(c, 2))
	


-- EXECUTION TIME:
0.229773
-- TEST CASE 1:
---- input:
C
320
---- correct output:
608.0
---- user output:
608.0
-- TEST CASE 2:
---- input:
F
320
---- correct output:
160.0
---- user output:
160.0
-- TEST CASE 3:
---- input:
C
0
---- correct output:
32.0
---- user output:
32.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
